# reactnative-fabric.trial

./: README.md
fabric-compat/: CONTRIBUTING.md  README.md  package.json  react-native-fabric-compat.podspec  tsconfig.json
fabric-compat/android/: build.gradle  gradle.properties  publish_local.gradle
fabric-compat/android/src/main/jni/: Android.mk  CMakeLists.txt  OnLoad.cpp
fabric-compat/example/: package.json
fabric-compat/example/ios/: Podfile  (+1 more)
fabric-compat/ios/: FabricCompatView.h  FabricCompatView.mm  FabricCompatViewManager.mm
fabric-compat/src/: FabricCompatViewNativeComponent.ts  index.tsx
fabric-only/: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fabric-only.podspec  tsconfig.json
fabric-only/android/: build.gradle  gradle.properties  publish_local.gradle
fabric-only/example/: app.json  package.json
fabric-only/ios/: FabricOnlyView.h  FabricOnlyView.mm  FabricOnlyViewManager.mm
fabric-only/src/: FabricOnlyViewNativeComponent.ts  index.tsx
modern-view/: CONTRIBUTING.md  README.md  package.json  react-native-modern-view.podspec  tsconfig.json
modern-view/android/: build.gradle  gradle.properties
modern-view/example/: app.json  package.json
modern-view/ios/: ModernViewViewManager.m  ModernViewViewManager.swift
modern-view/src/: index.tsx
simple-view/: CONTRIBUTING.md  README.md  package.json  react-native-simple-view.podspec  tsconfig.json
simple-view/android/: build.gradle  gradle.properties
simple-view/example/: app.json  package.json
simple-view/ios/: SimpleViewViewManager.m
simple-view/src/: index.tsx
(+110 files in other folders)
